workspace(name = "Panthera")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_Nov0cx_glfw",
    sha256 = "715ce2107146ff6786781b2afcc7447bd9495fcbc10068c957ca700a2fa187a3",
    strip_prefix = "glfw-master",
    urls = ["https://github.com/Nov0cx/glfw/archive/master.zip"],
)

http_archive(
    name = "com_github_Nov0cx_glm",
    sha256 = "460307392d92d236b56e45854445b41f094b1e7d866b2d838f63105d8bc26a70",
    strip_prefix = "glm-master",
    urls = ["https://github.com/Nov0cx/glm/archive/master.zip"],
)

http_archive(
    name = "com_github_Nov0cx_glad",
    sha256 = "6167b3281b5ce3b34c86b3e7e20bdd07dcc6404932f275822041246d45aab22c",
    strip_prefix = "glad-ec493400cc3300c4f3b34284e60b7f820f222036",
    urls = ["https://github.com/Nov0cx/Glad/archive/ec493400cc3300c4f3b34284e60b7f820f222036.zip"],
)

http_archive(
  name = "com_google_googletest",
  urls = ["https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip"],
  strip_prefix = "googletest-609281088cfefc76f9d0ce82e1ff6c30cc3591e5",
  sha256 = "5cf189eb6847b4f8fc603a3ffff3b0771c08eec7dd4bd961bfd45477dd13eb73",
)

http_archive(
    name = "com_github_Nov0cx_fmt",
    sha256 = "3882d99514ceae01c9c09e8e99fb1a7921a6e1e8d12c6cc1606471c2326a5a91",
    strip_prefix = "fmt-master",
    urls = ["https://github.com/Nov0cx/fmt/archive/master.zip"],
)

http_archive(
    name = "com_github_Nov0cx_spdlog",
    #sha256 = "e5598a6bf024bbdf993f4382a347d8bef23d46967e1534724aa646e7d0d83a22",
    strip_prefix = "spdlog-1.x",
    urls = ["https://github.com/Nov0cx/spdlog/archive/v1.x.zip"],
)

http_archive(
    name = "com_github_ocornut_imgui",
    sha256 = "eb41440e95cdfe256feedf96bb59d7ccd927edc59dc807328f5afe37bf69b943",
    strip_prefix = "imgui-docking",
    urls = ["https://github.com/ocornut/imgui/archive/docking.zip"],
    build_file = "@//extern:imgui.BUILD",
)


load("//vulkan/rules:repositories.bzl", "vulkan_repositories")
vulkan_repositories()