config_setting(
    name = "release",
    define_values = {
        "build_type": "release",
    }
)

config_setting(
    name = "debug",
    define_values = {
        "build_type": "debug",
    }
)

config_setting(
    name = "msvc",
    define_values = {
        "cmp": "msvc",
    }
)

cc_binary(
    name = "Leoparuds",
    srcs = ["Leopardus/Leopardus.cpp"],
    deps = ["//Panthera-Core:Panthera-Core"],
    copts = select({
                    ":msvc": ["/std:c++20", "/Zc:preprocessor", "/permissive-"],
                    "//conditions:default": ["-std=c++20"],
        }),
)