config_setting(
    name = "release",
    define_values = {
        "build_type": "release",
    }
)

config_setting(
    name = "debug",
    define_values = {
        "build_type": "debug",
    }
)

load("//bazel:copts.bzl", "copts")

cc_binary(
    name = "Leopardus",
    srcs = ["Leopardus/Leopardus.cpp"],
    deps = ["//Panthera-Core:Panthera-Core", "//Panthera-Renderer:Panthera-Renderer", "//Panthera-PCH:pch", "//Panthera-Event:Panthera-Event"],
    copts = copts,
    data = [
        "//assets:Assets"
    ],
)