cc_library(
    name = "LeopardusSrc",
    srcs = glob(["src/*.cpp", "Vendor/pfd/*.cpp"], exclude=["src/Leopardus.cpp"]),
    hdrs = glob(["src/*.hpp"]),
    deps = ["//Panthera-Core:Panthera-Core",
            "@com_github_samhocevar_pfd//:pfd",],
    strip_include_prefix = "src",
)

cc_binary(
    name = "Leopardus",
    srcs = ["src/Leopardus.cpp"],
    deps = [
        "//Panthera-Core:Panthera-Core",
        ":LeopardusSrc",
        "@bazel_tools//tools/cpp/runfiles",
    ],
    data = [
        "//Assets:Assets"
    ],
    defines = [ "USE_OPTICK=1" ],
)