config_setting(
    name = "release",
    define_values = {
        "build_type": "release",
    }
)

config_setting(
    name = "debug",
    define_values = {
        "build_type": "debug",
    }
)

load("//bazel:copts.bzl", "copts")

cc_library(
    name = "pch",
    srcs = ["src/ppch.cpp", "src/Panthera/Core/Log.cpp"],
    hdrs = ["src/ppch.hpp", "src/Panthera/Core/Log.hpp", "src/Panthera/Core/StringBase.hpp"],
    visibility = ["//visibility:public"],
    strip_include_prefix = "src",
    deps = [
        "@com_github_Nov0cx_fmt//:fmtlib",
    ],
    copts = copts,
)

cc_library(
    name = "Panthera-Core",
    srcs = glob(["src/Panthera/*.cpp", "src/Panthera/**/*.cpp", "src/Panthera/**/**/*.cpp"], exclude = ["src/Panthera/Core/Log.cpp"]),
    hdrs = glob(["src/Panthera/*.hpp", "src/Panthera/**/*.hpp", "src/Panthera/**/**/*.hpp"], exclude = ["src/Panthera/Core/Log.hpp", "src/Panthera/Core/StringBase.hpp"]),
    strip_include_prefix = "src",
    defines = [ "GLM_ENABLE_EXPERIMENTAL" ] + select({
                                           ":debug":
                                               ["PANTHERA_DEBUG"],
                                           ":release":
                                               ["PANTHERA_RELEASE"],
                                           "//conditions:default":
                                               ["PANTHERA_DEFAULT"],
                                       }),
    deps = [
        ":pch",
        "@com_github_Nov0cx_fmt//:fmtlib",
    ],
    copts = copts,
    visibility = ["//visibility:public"],
)
