config_setting(
    name = "release",
    define_values = {
        "build_type": "release",
    }
)

config_setting(
    name = "debug",
    define_values = {
        "build_type": "debug",
    }
)

load("//bazel:copts.bzl", "copts")

cc_library(
    name = "Panthera-Core",
    srcs = glob(["src/Panthera/*.cpp", "src/Panthera/**/*.cpp", "src/Panthera/**/**/*.cpp"],
                exclude = ["src/Panthera/Core/Log.cpp"]),
    hdrs = glob(["src/Panthera/*.hpp", "src/Panthera/**/*.hpp", "src/Panthera/**/**/*.hpp", "src/Vendor/debugbreak/*.hpp"],
                exclude = ["src/Panthera/Core/Log.hpp", "src/Panthera/Core/StringBase.hpp", "src/Panthera/Core/Ref.hpp"]),
    strip_include_prefix = "src",
    defines = [ "GLM_ENABLE_EXPERIMENTAL" ] + select({
                                           ":debug":
                                               ["PANTHERA_DEBUG"],
                                           ":release":
                                               ["PANTHERA_RELEASE"],
                                           "//conditions:default":
                                               ["PANTHERA_DEFAULT"],
                                       }) + select({
                                                  "@platforms//os:windows": ["PANTHERA_PLATFORM_WINDOWS"],
                                                  "@platforms//os:linux": ["PANTHERA_PLATFORM_LINUX"],
                                                  "@platforms//os:macos": ["PANTHERA_PLATFORM_MACOS"],
                                                  "//conditions:default": [],
                                              }),
    deps = [
        "//Panthera-PCH:pch",
        "@com_github_Nov0cx_fmt//:fmtlib",
        "@com_github_Nov0cx_glm//:glm",
        "//Panthera-Renderer:Panthera-Renderer",
        "//Panthera-Event:Panthera-Event",
    ],
    copts = copts,
    visibility = ["//visibility:public"],
)

cc_test(
    name = "Panthera-Core-Test",
    srcs = glob(["Testing/*.cpp"]),
    deps = [
        "//Panthera-PCH:pch",
        "@com_google_googletest//:gtest_main",
    ],
)
