config_setting(
    name = "msvc",
    define_values = {
        "cmp": "msvc",
    }
)

cc_library(
    name = "pch",
    srcs = ["Panthera-Pch/ppch.cpp"],
    hdrs = ["Panthera-Pch/ppch.hpp"],
    visibility = ["//visibility:public"],
    strip_include_prefix = "Panthera-Pch",
    copts = select({
                            ":msvc": ["/std:c++20", "/Zc:preprocessor", "/permissive-"],
                            "//conditions:default": ["-std=c++20"],
                }),
)